# Rust-products

01/mini-server/: Cargo.toml
01/mini-server/src/: main.rs
02/health-check/: Cargo.toml
02/health-check/src/: lib.rs  main.rs
02/health-check/tests/: health_check.rs
02/subscription-add/: Cargo.toml
02/subscription-add/src/: lib.rs  main.rs  startup.rs
02/subscription-add/src/routes/: subscriptions.rs
02/subscription-add/tests/: subscription_tests.rs
03/telemetry/: Cargo.toml
03/telemetry/src/: configuration.rs  main.rs
03/telemetry/src/routes/: health_check.rs  subscriptions.rs
03/telemetry/tests/: health_check.rs
04/deployment/: Cargo.toml  Dockerfile  sqlx-data.json
04/deployment/src/: lib.rs  main.rs  startup.rs
04/deployment/tests/: health_check.rs
05/parsing/: Cargo.toml  Dockerfile
05/parsing/src/: configuration.rs  lib.rs  main.rs
05/parsing/src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
05/parsing/src/routes/: subscriptions.rs
05/parsing/tests/: health_check.rs
